@@ -1805,12 +1805,12 @@ include/optical/CMakeLists.txt svneol=native#text/plain
 include/optical/debug.h svneol=native#text/plain
 include/optical/defines.h svneol=native#text/plain
 include/optical/light.h svneol=native#text/plain
+include/optical/plastic.h svneol=native#text/plain
 include/optical/shadefuncs.h svneol=native#text/plain
 include/optical/shadework.h svneol=native#text/plain
 include/pc.h svneol=native#text/plain
 include/photonmap.h svneol=native#text/plain
 include/pkg.h svneol=native#text/plain
-include/plastic.h svneol=native#text/plain
 include/pstdint.h svneol=native#text/plain
 include/raytrace.h svneol=native#text/plain
 include/rt/CMakeLists.txt svneol=native#text/plain
